--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,6 +22,8 @@ header {
 
     div.logoDiv {
         display: flex;
+        align-items: center;
+        justify-content: center;
 
         h1 {
             margin-left: 7.6px;
